# syntax-alchemy

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug-report.md  new-alchemy.md
.github/workflows/: ocaml-ci.yml
TD2/__MACOSX/mini-python/: ._run-tests
TD2/mini-python/: .gitignore  ast.ml  interp.ml  lexer.mll  minipython.ml  parser.mly  run-tests  test.py
TD2/mini-python/tests/good/: fib.py  pascal.py
alchemy-arithc/: .gitattributes  .gitignore  README.md  arith  test_step3.s
alchemy-arithc/docs/: lab-assignment.md  x86-64-reference.md
alchemy-arithc/docs/features/: arithmetic.md  booleans.md  control-flow.md  functions.md  lists.md  none.md  strings.md  type-checking.md  variables.md
alchemy-arithc/examples/: ackermann.exp  arithmetic_demo.exp  bubble_sort.exp  collatz.exp  comparison_demo.exp  countdown.exp  digit_sum.exp  factorial.exp  fibonacci.exp  gcd.exp  let_expressions.exp  list_filter.exp  list_max.exp  list_reverse.exp  list_sum.exp  nested_lists.exp  power.exp  prime_checker.exp  range_demo.exp  run_all.sh  string_comparison.exp  string_concat.exp  test_crlf.exp  test_lf.exp  tower_of_hanoi.exp
alchemy-arithc/src/: arithc.bc  arithc.ml  ast.ml  compile.ml  compile.mli  dune  lexer.mll  parser.mly  typecheck.ml  x86_64.ml  x86_64.mli
alchemy-arithc/tests/: dune  run_tests.sh  test.expected  test_booleans.exp  test_booleans.expected  test_conditionals.exp  test_conditionals.expected  test_for.exp  test_for.expected  test_functions.exp  test_let_poly.exp  test_list_ops.exp  test_list_ops.expected  test_lists.exp  test_lists.expected  test_logical.exp  test_logical.expected  test_loops.exp  test_loops.expected  test_modulo.exp  test_none.exp  test_none.expected  test_range.exp  test_range.expected  test_recursion.exp  test_return_outside.exp  test_return_outside.expected  test_step1.exp  test_step2.exp  test_step2.expected  test_step3.exp  test_step3.expected  test_step4.exp  test_strings.exp  test_strings.expected  test_type_error_add.exp  test_type_error_add.expected  test_type_error_bool_order.exp  test_type_error_fun_arg.exp  test_type_error_fun_arity.exp  (+10 more)
docs/: AGENTS.md  LABS.md  ROADMAP.md
docs/labs/: TD 2.md  TD1.md  TD3.md  TD4.md  TD5.md  TD6.md
labs/: README.md
labs/td2-mini-python/: README.md
labs/td3-algorithm-w/: README.md  dune  td3.ml
labs/td4-automata/: README.md  automata.ml  dune
labs/td5-ll1-parser/: README.md
labs/td6-mini-turtle/: README.md
scripts/: new-alchemy.sh  test-all.sh
(+2 files in other folders)
